--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ h1, h2 {
     font-size: 39px; /* 初期値 (JSで変更可能) */
     justify-content: center; /* 中央揃えpx; /* 少し大きめに */
     padding-right: 40px;
+    padding-top : 20px;
 }
 
 .notes-row {
