--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family: sans-serif;
     line-height: 1.6;
     margin: 20px;
-    background-color: #f4f4f4;
+    background-color: #f0f0f086;
 }
 
 .container {
