style.css 備考の位置調整

--- a/style.css
+++ b/style.css
@@ -455,6 +455,7 @@ button:hover {
         /* color: blue !important; */ /* 色を維持する場合 */
         white-space: pre-wrap !important; /* 改行維持 */
         word-break: break-all !important; /* 折り返し維持 */
+        overflow: visible !important
     }
     .price-row {
         /* font-size: 72px !important; */ /* 必要なら */
